reverse CMAKE_EXE_LINKER_FLAGS of -Wl,-Bsymbolic

--- a/euler/client/CMakeLists.txt
+++ b/euler/client/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_subdirectory(testing)
-SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bsymbolic")
-SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-Bsymbolic")
+#SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-Bsymbolic")
 add_library(client SHARED
             graph.cc
             graph_config.cc
