--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0 -O3 -fno-omit-frame-pointer)
 
-option(USE_JEMALLOC "Option for using jemalloc" ON)
+option(USE_JEMALLOC "Option for using jemalloc" OFF)
 option(BUILD_COVERAGE "Build coverage system" OFF)
 option(USE_HDFS "Option for using hdfs" OFF)
 
